--- a/requirements_project.txt
+++ b/requirements_project.txt
@@ -19,4 +19,7 @@ r7insight_python==0.9.2
 Logentries==0.17
 
 # cors-headers
-django-cors-headers==3.0.1
+django-cors-headers>=3.0.1
+djangorestframework>=3.11.0
+
+djangorestframework-xml>=2.0.0
