--- a/requirements_project.txt
+++ b/requirements_project.txt
@@ -11,8 +11,8 @@ requests-kerberos==0.12.0
 mock==3.0.5
 
 # only our third party here
-ib_common
-django-swagger-utils
+# ib_common
+# django-swagger-utils
 
 # logentries
 r7insight_python==0.9.2
